# AIDrummer

./: .gitattributes  .gitignore  .ignore  Drummer.code-workspace  Drummer.sln  Drummer.uproject  README.md
Assets/: mappings.csv  retarget_mixamo.csv
Assets/Mixamo/: Y Bot.fbx
Assets/animation_fxb/: crash_1.fbx  crash_2.fbx  hihat_Open.fbx  hihat_and_snare.fbx  idle.fbx  ride_1.fbx  snare.fbx  snareroll.fbx  snareroll_fixed.fbx  tom_high.fbx  tom_low.fbx  tom_mid.fbx
Binaries/Mac/: DrummerEditor.target  UnrealEditor-Drummer-0064 2.dylib  UnrealEditor-Drummer-0083.dylib  UnrealEditor-Drummer-0279.dylib  UnrealEditor-Drummer-0312.dylib  UnrealEditor-Drummer-0352.dylib  UnrealEditor-Drummer-0540.dylib  UnrealEditor-Drummer-0551.dylib  UnrealEditor-Drummer-0685.dylib  UnrealEditor-Drummer-0736.dylib  UnrealEditor-Drummer-0789.dylib  UnrealEditor-Drummer-0849.dylib  UnrealEditor-Drummer-0900.dylib  UnrealEditor-Drummer-0908.dylib  UnrealEditor-Drummer-0934 2.dylib  UnrealEditor-Drummer-0996.dylib  UnrealEditor-Drummer-1304 2.dylib  UnrealEditor-Drummer-1306.dylib  UnrealEditor-Drummer-1350.dylib  UnrealEditor-Drummer-1382.dylib  UnrealEditor-Drummer-1535.dylib  UnrealEditor-Drummer-1557.dylib  UnrealEditor-Drummer-1630.dylib  UnrealEditor-Drummer-1665.dylib  UnrealEditor-Drummer-1702.dylib  (+125 more)
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Source/: Drummer.Target.cs  DrummerEditor.Target.cs
Source/DataProcessing/: CMakeLists.txt
Source/DataProcessing/Private/: AnimationMidiProcessor.cpp  main.cpp
Source/DataProcessing/Public/: AnimationMidiProcessor.h
(+1568 files in other folders)
